# ledger-app-pocket

./: .gitignore  CONTRIBUTING.md  Cargo.nix  ChangeLog.md  README.md  crate-hashes.json  default.nix  guide.md  node-packages.nix  old-package.json  package.json  pocket-core.patch  release.nix  run-docker-build.sh  speculos-wrapper  tarball-default.nix  tarball-shell.nix
.cargo/: config
dep/alamgu/: github.json
dep/hw-app-pokt/: github.json
dep/ledger-platform/: github.json
dep/ledger-secure-sdk-nanox/: github.json
docker/: run-build-in-docker.sh
docs/: apdu.md
rust-app/: Cargo.toml  build.rs  mkTarball.sh
rust-app/bin-src/: main.rs  main_nanos.rs
rust-app/ledger-log/src/: lib.rs
rust-app/speculos-api/src/apis/: request.rs
rust-app/src/: crypto_helpers.rs  implementation.rs  interface.rs  lib.rs  main.rs  main_nanos.rs  menu.rs  utils.rs
rust-app/tests/: integration.rs  ts-tests.rs
rust-app/ts-tests/: basic_tests.ts  package.json
src/: util.ts
src/commands/: getAddress.ts  send.ts  unstake-node.ts
test-cli/: default.nix  package-lock.json  package.json  supplement.nix
test-cli/src/commands/: getAddress.ts  sign.ts  stake-node.ts  unjail-node.ts
ts-tests/: .mocharc.js  basic_tests.ts  common.ts  default.nix  node-packages.nix  override.nix  package-lock.json  package.json  public-key-tests.ts  signing-tests.ts
