[package]
name = "rust-app"
version = "0.2.0"
authors = ["yhql"]
edition = "2018"
autobins = false
target = "thumv6m-none-eabi"

[dependencies]
ledger-parser-combinators = { git = "https://github.com/obsidiansystems/ledger-parser-combinators", branch = "json-parser"}
ledger-log = { path = "./ledger-log", features=["log_trace"] } # change to log_info, log_trace, etc. to change log level.
arrayvec = { version = "0.7.1", default-features = false }

[features]
default = [ "speculos" ]
speculos = ["nanos_sdk/speculos", "ledger-log/speculos"]
extra_debug = []

[target.thumbv6m-none-eabi.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 

[target.thumbv6m-none-eabi.dev-dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git", features= [ "speculos" ] }

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro"}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
ledger-apdu = { git = "https://github.com/zondax/ledger-rs.git" }
speculos-api = { path = "speculos-api" }
tokio = { version = "1", features = ["full"] } # features = ["full"] }
tokio-retry = "0.3.0"
hyper = { version = "0.14.10", features = ["client", "http1", "http2", "tcp"] }
hex = "0.4.3"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
futures = "0.3.16"
lazy_static = "1.4.0"
os-sync = "0.3.3"

[[bin]]
name = "rust-app"
test = false

[[test]]
name = "integration"
test = false

#[target.thumbv6m-none-eabi.unstable]
#build-std = ["core"]


[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/ObsidianSystems/ledger-nanos-sdk.git"
branch = "use-ambient-compiler-and-target"

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
opt-level = 'z' 
lto = true

[profile.test]


[package.metadata.nanos]
curve = "secp256k1"
flags = "0"
icon = "crab.gif"
