[package]
name = "rust-app"
version = "0.2.0"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-parser-combinators = { git = "https://github.com/obsidiansystems/ledger-parser-combinators" }
ledger-log = { git = "https://github.com/obsidiansystems/ledger-platform" }

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]

[target.thumbv6m-none-eabi.dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 
prompts-ui = { git = "https://github.com/obsidiansystems/ledger-platform" }

[target.thumbv6m-none-eabi.dev-dependencies.nanos_sdk]
git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git"
features = [ "speculos" ]

[[bin]]
name = "rust-app"
test = false
path = "bin-src/main.rs"

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/obsidiansystems/ledger-nanos-sdk.git"
branch = "use-ambient-compiler-and-target"

[profile.dev]
# panic = "abort"
lto = true

[profile.release]
# panic = "abort"
opt-level = 'z' 
lto = true

[profile.test]


[package.metadata.nanos]
name = "Rust App"
path = "44'/535348'"
curve = "secp256k1"
flags = "0"
icon = "crab.gif"
